--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   http: ^0.13.4
   fluttertoast: ^8.0.8
   form_field_validator: ^1.1.0
+  firebase_storage: ^10.2.6
+  image_picker: ^0.8.4+6
   
   
   
