--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   form_field_validator: ^1.1.0
   firebase_storage: ^10.2.6
   image_picker: ^0.8.4+6
+  algolia: ^1.0.4
   
   
   
