--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,7 +86,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/cir_green.png
+    - assets/images/
+
   # #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
